dashboard/ingressroute/3-dashboard-service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: default
spec:
  ports:
    - port: 9090
  selector:
    k8s-app: kubernetes-dashboard
